2007-12-19  Federico Mena Quintero  <federico@novell.com>

	Fix http://bugzilla.gnome.org/show_bug.cgi?id=474666 - In X
	startup scripts, a way is needed to detect if there was no user
	profile for the user.

	* lib/util.py (EXIT_CODE_NO_USER_PROFILE): New exit code of 3 for
	sabayon-apply when no user profile can be found for the user.

	* admin-tool/sabayon-apply: Exit with
	util.EXIT_CODE_NO_USER_PROFILE if no profile is found for the user.

2007-12-19  Federico Mena Quintero  <federico@novell.com>

	* lib/storage.py (copy_tree): Create all the directories in the
	path (mkdir -p).  Fixes
	http://bugzilla.gnome.org/show_bug.cgi?id=486216 - patch by Dan Walsh.

2007-09-19  Federico Mena Quintero  <federico@novell.com>

	* lib/userdb.py (get_setting): ARGH, remove a stray parenthesis.

==================== 2.20.0 ====================

2007-09-19  Federico Mena Quintero  <federico@novell.com>

	* configure.ac: Bumped version number to 2.20.0.

2007-09-19  Federico Mena Quintero  <federico@novell.com>

	Fix http://bugzilla.gnome.org/show_bug.cgi?id=475434 - Plurals
	were not getting translated as gettext.ngettext() assumes
	textdomain() / bindtextdomain() have been called, but we use
	gettext.install() instead.

	* lib/util.py (init_gettext): Add ngettext as part of the "names"
	argument to gettext.install, so that ngettext() will get bound as a
	built-in.

	* admin-tool/saveconfirm.py (SaveConfirmationAlert.__init__): Call
	ngettext(), not gettext.ngettext(); the former is now bound as a
	built-in.

2007-09-19  Federico Mena Quintero  <federico@novell.com>

	Fix http://bugzilla.gnome.org/show_bug.cgi?id=450085 - Strings
	coming from sabayon.glade do not appear translated.

	* admin-tool/profilesdialog.py (AddProfileDialog.__init__): Pass
	the l10n domain to gtk.glade.XML.
	(ProfilesDialog.__init__): Likewise.

	* admin-tool/usersdialog.py (UsersDialog.__init__): Likewise.

2007-09-13  Federico Mena Quintero  <federico@novell.com>
