@@ -1,5 +1,3 @@
-#!/usr/bin/env python
-
 # vim: set ts=4 sw=4 et:
 
 #
