@@ -1,3 +1,8 @@
+2008-01-05  John William Robeson <johnny@localmomentum.net>
+
+	Remove shebang line from non-executable python scripts 
+	Fixes: http://bugzilla.gnome.org/show_bug.cgi?id=424328
+
 2007-12-19  Federico Mena Quintero  <federico@novell.com>
 
 	Fix http://bugzilla.gnome.org/show_bug.cgi?id=474666 - In X
